--- a/events.html
+++ b/events.html
@@ -391,6 +391,105 @@
   </div>
   </section>
   <!-- End of card -->
+  <!-- begin of extra events -->
+
+  <section id="extra-events">
+    <div class="container">
+    <div class="title h1 text-center">meer leuke events</div>
+    </div>
+    <div id="results" class="cards-search">
+      <div class="container center-results">
+
+    <div class="card">
+      <span class="bg">
+    				<div class="date">
+    				thu
+    				</div>
+    				<span  >
+    			</span>
+    					<div class="date2">
+    				11
+    				</div>
+    				<span >
+    			</span>
+    				<div class="date3">
+    				jun
+    				</div>
+    			</span>
+      <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+      <div class="card-body results-body">
+        <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+          <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+        <div>
+          <p><i class="fas fa-venus"></i> available
+          <i class="fas fa-mars"></i> available
+             <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+        </div>
+
+      </div>
+    </div>
+    <div class="card">
+      <span class="bg">
+    				<div class="date">
+    				thu
+    				</div>
+    				<span  >
+    			</span>
+    					<div class="date2">
+    				11
+    				</div>
+    				<span >
+    			</span>
+    				<div class="date3">
+    				jun
+    				</div>
+    			</span>
+      <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+      <div class="card-body results-body">
+        <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+          <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+        <div>
+          <p><i class="fas fa-venus"></i> available
+          <i class="fas fa-mars"></i> available
+             <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+        </div>
+
+      </div>
+    </div>
+    <div class="card">
+      <span class="bg">
+    				<div class="date">
+    				thu
+    				</div>
+    				<span  >
+    			</span>
+    					<div class="date2">
+    				11
+    				</div>
+    				<span >
+    			</span>
+    				<div class="date3">
+    				jun
+    				</div>
+    			</span>
+      <img src="https://media.istockphoto.com/photos/sweet-couple-having-a-romantic-dinner-picture-id860821478?k=6&m=860821478&s=612x612&w=0&h=Z2FEfxbHNnahwJby14JUIuWcygLlZ2dpdRuELDOkOuw=" class="card-img-top" alt="...">
+      <div class="card-body results-body">
+        <h5 class="card-title results-title">Speeddate Antwerpen <span class= "float"><i class="fas fa-euro-sign"></i> 24<span/></h5>
+
+          <p class="age"><i class="fas fa-user-plus"></i> <strong>24-25 Jaar </strong></p>
+        <div>
+          <p><i class="fas fa-venus"></i> available
+          <i class="fas fa-mars"></i> available
+             <a href="#" class="btn btn-primary">NU BOEKEN</a></p>
+        </div>
+
+      </div>
+    </div>
+
+
+  </section>
 
   <!-- begin footer Section -->
   <footer>
